tests/ui/type-alias-impl-trait/const_generic_type.no_infer.stderr
error: unconstrained opaque type
  --> $DIR/const_generic_type.rs:5:12
   |
LL | type Bar = impl std::fmt::Display;
   |            ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Bar` must be used in combination with a concrete type within the same module

error: `Bar` is forbidden as the type of a const generic parameter
  --> $DIR/const_generic_type.rs:8:24
   |
LL | async fn test<const N: crate::Bar>() {
   |                        ^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`

error: aborting due to 2 previous errors

